--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.11.1",
+    "cors": "^2.8.5",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -18,5 +19,9 @@
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
     "prisma": "^3.11.1"
+  },
+  "type": "module",
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
